tests/k8s_testcases/network-policy-checks-bad-path/spec_podselector_null.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: spec-podselector-test-null
  namespace: kube-system
spec:
  # null
  podSelector: null
  policyTypes:
  - Ingress
  - Egress
  ingress:
    - from:
      - namespaceSelector: {}
        podSelector: {}
  egress:
    - to:
      - namespaceSelector: {}
        podSelector: {}
